gs/src/gxpaint.c
@@ -22,6 +22,15 @@
 #include "gxhttile.h"
 #include "gxpaint.h"
 #include "gxpath.h"
+#include "gxfont.h"
+
+private bool caching_an_outline_font(const gs_state * pgs)
+{
+    return pgs->in_cachedevice > 1 &&
+	    pgs->font != NULL &&
+	    pgs->font->FontType != ft_user_defined && 
+	    pgs->font->FontType != ft_CID_user_defined;
+}
 
 /* Fill a path. */
 int
@@ -38,7 +47,7 @@ gx_fill_path(gx_path * ppath, gx_device_color * pdevc, gs_state * pgs,
     params.rule = rule;
     params.adjust.x = adjust_x;
     params.adjust.y = adjust_y;
-    params.flatness = (pgs->in_cachedevice > 1 ? 0.0 : pgs->flatness);
+    params.flatness = (caching_an_outline_font(pgs) ? 0.0 : pgs->flatness);
     params.fill_zero_width = (adjust_x | adjust_y) != 0;
     return (*dev_proc(dev, fill_path))
 	(dev, (const gs_imager_state *)pgs, ppath, &params, pdevc, pcpath);
@@ -55,7 +64,7 @@ gx_stroke_fill(gx_path * ppath, gs_state * pgs)
 
     if (code < 0)
 	return code;
-    params.flatness = (pgs->in_cachedevice > 1 ? 0.0 : pgs->flatness);
+    params.flatness = (caching_an_outline_font(pgs) ? 0.0 : pgs->flatness);
     return (*dev_proc(dev, stroke_path))
 	(dev, (const gs_imager_state *)pgs, ppath, &params,
 	 pgs->dev_color, pcpath);
@@ -67,7 +76,7 @@ gx_stroke_add(gx_path * ppath, gx_path * to_path,
 {
     gx_stroke_params params;
 
-    params.flatness = (pgs->in_cachedevice > 1 ? 0.0 : pgs->flatness);
+    params.flatness = (caching_an_outline_font(pgs) ? 0.0 : pgs->flatness);
     return gx_stroke_path_only(ppath, to_path, pgs->device,
 			       (const gs_imager_state *)pgs,
 			       &params, NULL, NULL);
